# opensituas

./: .gitignore  LICENSE  LOG.md  README.md  pyproject.toml
demo/: index.html
docs/: architecture.md  index.html  release.md  situas-swagger.json  tutorial-giornalisti.md
docs/skill/: README.md
openspec/changes/add-agent-context-and-which/: design.md  proposal.md  tasks.md
openspec/changes/add-agent-context-and-which/specs/agent-context/: spec.md
openspec/changes/add-agent-context-and-which/specs/which/: spec.md
skills/situas-explorer/: SKILL.md
src/opensituas/: __init__.py  base.py  catalog.py  catalog_snapshot.json  cli.py  output.py  territorial.py
tasks/: todo.md
tests/: test_agent_which.py  test_logic.py
