[project]
name = "opensituas"
version = "0.1.0"
description = "CLI per il SITUAS (Sistema Informativo Territoriale delle Unità Amministrative e Statistiche, ISTAT), pensata per l'orchestrazione da parte di agenti AI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28",
    "typer>=0.15",
    "rich>=13.9",
]

[project.scripts]
opensituas = "opensituas:main"

[build-system]
requires = ["uv_build>=0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "opensituas"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
